objects/Customer_Survey__c.object
<CustomObject><fields>
        <fullName>CSAT__c</fullName>
        <description>Turns the field "CSAT Score" into a number that can be averaged.</description>
        <formula>IF(CONTAINS(TEXT(Question_2__c), " - "),
VALUE(LEFT(TEXT(Question_2__c), FIND(" - ", TEXT(Question_2__c)) - 1)),
VALUE(TEXT(Question_2__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Effort__c</fullName>
        <description>Turns the field "Effortless Experience?" into a number that can be averaged.</description>
        <formula>VALUE(LEFT(TEXT(Question_1__c), 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effort</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>NPS__c</fullName>
        <description>Turns the field "NPS Score" into a number that can be averaged.</description>
        <formula>IF(CONTAINS(TEXT(Question_3__c), " - "),
VALUE(LEFT(TEXT(Question_3__c), FIND(" - ", TEXT(Question_3__c)) - 1)),
VALUE(TEXT(Question_3__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Question_1__c</fullName>
        <inlineHelpText>To what extent do you agree or disagree with the following statement:

The company made it easy for me to handle my issue.</inlineHelpText>
        <label>Effortless Experience?</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Somewhat Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Neither Agree Nor Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Somewhat Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Question_2__c</fullName>
        <inlineHelpText>How would you rate your overall satisfaction with your customer service experience?</inlineHelpText>
        <label>CSAT Score</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Very Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Not Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Very Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Question_3__c</fullName>
        <inlineHelpText>How likely is it that you would recommend this company to a friend or colleague?</inlineHelpText>
        <label>NPS Score</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Not at all likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Extremely Likely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Customer Survey</label><nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Customer Survey Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Customer Surveys</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Case__c</columns>
        <columns>Question_2__c</columns>
        <columns>Question_1__c</columns>
        <columns>Question_4__c</columns>
        <columns>Question_3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>